--- a/Basic_HTML_1.html
+++ b/Basic_HTML_1.html
@@ -3,4 +3,7 @@
 <script src="Basic_JavaScript_1.js"></script>
 
 <font color="green">This is green text</font>
+
+<font color="00FFFF">This is aqua text</font>
+
 </html>
