--- a/Basic_HTML_1.html
+++ b/Basic_HTML_1.html
@@ -6,4 +6,11 @@
 
 <font color="00FFFF">This is aqua text</font>
 
+<p><font color="blue">This is blue text</font>
+
+<p>
+	<font color="pink" face="Arial" size="12">
+		This font is in pink color and Arial style
+	</font>
+</p>
 </html>
