Add wolves picture and alt

--- a/Basic_HTML_1.html
+++ b/Basic_HTML_1.html
@@ -13,4 +13,13 @@
 		This font is in pink color and Arial style
 	</font>
 </p>
+
+<img src="Wolves.jpg" alt="Wolves like to hunt in packs"/>
+
+<p><b>Activision loves microtransactions</b>
+<i>EA games loves taking your money</i>
+<u>343 ruined halo</u>
+</p>
 </html>
+
+
